Removido token.pickle do repositório - arquivo local sensível

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ $RECYCLE.BIN/
 *secret*
 .env
 credentials.json
+token.pickle
+*.pickle
 
 # Chromedriver (pode ser baixado novamente)
 chromedriver.exe
