refactor(services): migrar gerar_resumo_ponto -> _impl; adicionar teste e suprimir DeprecationWarning PyPDF2

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 filterwarnings =
     ignore::DeprecationWarning:reportlab.lib.rl_safe_eval
     ignore::DeprecationWarning:dateutil.tz.tz
+    # Silencia aviso depreciação do PyPDF2 em dependências de terceiros
+    ignore::DeprecationWarning:PyPDF2
