feat: adicionar gerador de certificados PDF e sistema de storage manager
- Implementado gerador de certificados com adaptação de gênero
- Adicionado storage_manager para arquivos grandes
- Incluídas imagens para certificados (logos e backgrounds)
- Removidos arquivos CSV grandes desnecessários
- Atualizado .gitignore para excluir build/dist/executáveis

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,10 @@ ver_*.py
 ~$*.xlsx
 ~$*.xls
 ~$*.csv
+
+# Build e distribuição - NÃO SINCRONIZAR (arquivos grandes)
+build/
+dist/
+installer_output/
+*.exe
+*.spec
