Segurança: Remover credenciais hardcoded e arquivos sensíveis
- Removidas credenciais GEDUC de config.py
- Removidas credenciais hardcoded de integrador_preenchimento.py
- Configurado para usar variáveis de ambiente (GEDUC_USER, GEDUC_PASS)
- Removidos arquivos sensíveis do rastreamento (deepseek.json, local_config.json)
- Atualizado .gitignore para prevenir commits futuros
- Criado SECURITY.md com políticas de segurança
- Criado CHECKLIST_SEGURANCA.md com guia completo
- Atualizado README.md com avisos de segurança
- Atualizado .env.example com instruções claras

IMPORTANTE: Histórico do Git contém credenciais antigas.
Antes de tornar público, execute limpeza do histórico conforme CHECKLIST_SEGURANCA.md

--- a/.gitignore
+++ b/.gitignore
@@ -48,14 +48,23 @@ desktop.ini
 $RECYCLE.BIN/
 *.lnk
 
-# Credenciais - NUNCA SINCRONIZAR
+# Credenciais e arquivos sensíveis - NUNCA SINCRONIZAR
 *credentials*
 *password*
 *secret*
 .env
+.env.local
+.env.production
 credentials.json
 token.pickle
 *.pickle
+local_config.json
+deepseek.json
+
+# Dados sensíveis
+dados/nis/
+temp/
+uploads/
 
 # Chromedriver (pode ser baixado novamente)
 chromedriver.exe
