--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,24 @@
+# ============================================================================
+# CONFIGURAÇÃO DO SISTEMA DE GESTÃO ESCOLAR
+# ============================================================================
+# IMPORTANTE: Este é um arquivo de EXEMPLO
+# 1. Copie este arquivo para .env (cp .env.example .env)
+# 2. Edite o arquivo .env com suas credenciais REAIS
+# 3. NUNCA commite o arquivo .env no Git!
+# ============================================================================
+
 # Configurações do Banco de Dados MySQL
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=sua_senha_aqui
-DB_NAME=nome_do_banco
+DB_USER=seu_usuario_aqui
+DB_PASSWORD=sua_senha_forte_aqui
+DB_NAME=redeescola
+
+# ============================================================================
+# Credenciais GEDUC (Sistema Externo)
+# ============================================================================
+# Configure suas credenciais reais do GEDUC
+GEDUC_USER=seu_usuario_geduc
+GEDUC_PASS=sua_senha_geduc
 
 # ============================================================================
 # MELHORIA 4: Configuração do Connection Pool
