Limpeza de segurança: Remover arquivos sensíveis e irrelevantes
ARQUIVOS REMOVIDOS (31 arquivos):

Dados Sensíveis:
- ata_8ano_geduc.txt, ata_8ano_real.txt (dados reais de alunos)
- logs/app.log.1 (logs com informações sensíveis)
- temp/teste_pendencias.xlsx (dados reais)

Configurações Específicas:
- config/casos_similares_*.csv (dados de escolas)
- config/revisao_*.csv (dados de sincronização)
- config/detalhes_escolas_geduc*.json (dados GEDUC)
- config/mapeamento_*.json (mapeamentos específicos)
- config/relatorio_*.txt

Backups SQL:
- sql/backup_escolas_*.sql (8 backups com dados reais)
- sql/dados_questoes_*.sql
- sql/mapeamento_geduc*.sql

Arquivos Temporários/Debug:
- temp_admin_check.txt
- docs/lista_arquivos_*.txt
- docs/pr_body.txt
- docs/REMAINDER_PRINTS.txt
- docs/pytest_full_output.txt
- docs/todos_codigos_sistema.txt
- docs/ANALISE_main_py.md.bak

Imagens Irrelevantes:
- ChatGPT Image 17 de dez. de 2025, 11_08_35.png

GITIGNORE ATUALIZADO:
- Adicionados padrões para arquivos temporários
- Padrões para backups SQL com dados
- Padrões para arquivos CSV/JSON com dados específicos
- Padrões para atas e relatórios com dados reais

Repositório agora está limpo e seguro para publicação!

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ ENV/
 migrations/backup_*.sql
 migrations/backup_redeescola.sql
 
+# Backups SQL com dados reais
+sql/backup_*.sql
+sql/dados_questoes_*.sql
+sql/mapeamento_*.sql
+
 # Backups - NÃO SINCRONIZAR
 Backup_Sistema/
 *.backup
@@ -34,6 +39,23 @@ conexao_local.py
 *.tmp
 ~$*
 *.swp
+*.bak
+*_temp.txt
+*_check.txt
+temp_*.txt
+
+# Arquivos de documentação temporária ou debug
+docs/*_temp.txt
+docs/*_codigo.txt
+docs/pr_body.txt
+docs/REMAINDER_PRINTS.txt
+docs/pytest_full_output.txt
+docs/todos_codigos_sistema.txt
+docs/*.bak
+
+# Arquivos com dados reais de alunos - NUNCA SINCRONIZAR
+ata_*.txt
+config/relatorio_*.txt
 
 # VS Code
 .vscode/
@@ -65,6 +87,14 @@ deepseek.json
 dados/nis/
 temp/
 uploads/
+
+# Arquivos CSV com dados reais - NUNCA SINCRONIZAR
+config/casos_similares_*.csv
+config/revisao_*.csv
+config/relatorio_*.txt
+config/detalhes_escolas_geduc*.json
+config/mapeamento_geduc*.json
+config/mapeamento_*.json
 
 # Chromedriver (pode ser baixado novamente)
 chromedriver.exe
